@@ -1,3 +1,7 @@
+2011-04-12  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c: fix for [Bug 2440625], kbk's patch
+
 2011-04-11  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclBasic.c:
